src/test/ui/error-codes/E0454.stderr
error[E0454]: `#[link(name = "")]` given with empty name
  --> $DIR/E0454.rs:1:1
   |
LL | #[link(name = "")] extern "C" {}
   | ^^^^^^^^^^^^^^^^^^ empty name given

error: aborting due to previous error

For more information about this error, try `rustc --explain E0454`.
